Fixed comments on looped_solver.ipynb

--- a/looped_solver.ipynb
+++ b/looped_solver.ipynb
@@ -39,9 +39,9 @@
     "\n",
     "Note:\n",
     "- The largest radius in radii_list must match planet_size (converted to meters).\n",
-    "- All computations use SI units."
-
-    Let's  start by defining our solver function before showing an example.
+    "- All computations use SI units.\n"
+    "\n"
+    "Let's  start by defining our solver function before showing an example."
    ]
   },
   {
