--- a/looped_solver.ipynb
+++ b/looped_solver.ipynb
@@ -39,8 +39,8 @@
     "\n",
     "Note:\n",
     "- The largest radius in radii_list must match planet_size (converted to meters).\n",
-    "- All computations use SI units.\n"
-    "\n"
+    "- All computations use SI units.\n",
+    "\n",
     "Let's  start by defining our solver function before showing an example."
    ]
   },
@@ -200,9 +200,11 @@
    "id": "868823ae",
    "metadata": {},
    "source": [
-    "Let's try creating a planet using ```planetary_dictionary``` and running our Solver to print out our densities and pressures. This list is rather long, so feel free to scroll past it and look at example plots at the bottom of this notebook. \n",
+    "Let's try creating a planet using ```planetary_dictionary``` and running our Solver to print out our densities and pressures.\n",
     "\n",
-    "Let's construct a planet that has a radius of 1 Earth radius. It will be 0.3 parts core and 0.5 parts mantle by depth."
+    "Let's construct a planet that has a radius of 1 Earth radius. It will be 0.3 parts core and 0.5 parts mantle by depth.\n",
+    "\n",
+    "Note: This output list is rather long, so feel free to scroll past it and look at example plots at the bottom of this notebook."
    ]
   },
   {
