--- a/contour_plot_maker.ipynb
+++ b/contour_plot_maker.ipynb
@@ -20,6 +20,7 @@
    "source": [
     "# This cell is for replotting straight from the csv\n",
     "# Run the next cell if there is no existing csv\n",
+    "# 'twilight' colormap option may be best. Adjust vmin,vmax to 0,20 to center at 10 GPa\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
