--- a/monte_carlo_planets.ipynb
+++ b/monte_carlo_planets.ipynb
@@ -5072,8 +5072,9 @@
    ],
    "source": [
     "def monte_carlo_plot(number):\n",
-    "    '''will output a scatterplot with information about diamond formation candidacy of hypothetical planets along with csv of data\n",
-    "    make sure that the names of the scatterplots and csvs already existing in the directory don't interfere\n",
+    "    '''Calling this function will output a scatterplot with information about diamond formation candidacy of hypothetical planets along with csv of data.\n",
+    "    Make sure that the names of the scatterplots and csvs already existing in the directory don't interfere or overwrite.\n",
+    "    For visibility, raise the alpha (transparency values) if working with smaller sample sizes.\n",
     "    '''\n",
     "    \n",
     "    base_filename = f\"diamond_results_{number}\"\n",
