--- a/looped_solver.ipynb
+++ b/looped_solver.ipynb
@@ -182,10 +182,11 @@
     "                        else:\n",
     "                            pressure_n1[n] = EOS.BM3(density_n1[n], 1456, 14.9 * (10 ** 9), 5.4)\n",
     "                            break\n",
-    "    \n",
-    "        if all(abs(np.array(list(density_n1.values())[:1000]) - np.array(density_list[:1000]) < discrepancy)):\n",
-    "            return(list(density_n1.values()), list(pressure_n1.values()))\n",
+    "        \n",
+    "        if np.all(abs(np.array(list(density_n1.values())) - np.array(density_list)) < discrepancy):\n",
+    "            return([density_n1[r] for r in radii_list], [pressure_n[r] for r in radii_list])\n",
     "        #If all densities are self-consistent to 10 kg/m^3, return a list of densities and a list of pressures.\n",
+    "        #The pressure we want to return is the equilibrium pressure computed from the Adams-Williamson equation.\n",
     "    \n",
     "        else:\n",
     "            return(Solver(radii_list, insert_dict, density_list = list(density_n1.values()), discrepancy = discrepancy, calls = calls))\n",
@@ -335,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
